<resources>
    <string name="app_name">BorcheltMerryChristmas</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="until_christmas">Until Christmas</string>
    <string name="seconds">Seconds</string>
    <string name="minutes">Minutes</string>
    <string name="hours">Hours</string>
    <string name="days">Days</string>
    <string name="merry_christmas">Merry Christmas</string>
    <string name="there_are_only">There are only</string>
    <string name="type_your_question_here">Type your question here</string>
    <string name="ask_santa">Ask Santa</string>
    <string name="talk_to_santa">Talk to Santa</string>

    <string name="speech_prompt">Speak now.</string>
    <string name="speech_not_supported">Sorry, speech not supported on your device.</string>
    <string name="user_input_hint">Enter Text or Click Talk to Magpie!</string>
</resources>